Add Babel for localisation + default translations.

--- a/caliopen/templates/layout/contact.jinja2
+++ b/caliopen/templates/layout/contact.jinja2
@@ -5,9 +5,9 @@
     <div class="layout">
       <div>
         <div class="content">
-          <h2>Aujourd'hui, nous avons besoin d'aide.</h2>
-          <p>Pour avancer plus rapidement sur le développement de notre interface utilisateur, nous avons besoin de développeurs Web (Angular, Pyramid, Python). Nous avons besoin de compétences dans le domaine de la cryptographie aussi, pour valider nos choix ou pour les améliorer.</p>
-          <p>Pour toute question, ou pour proposer votre aide, vous pouvez nous contacter.</p>
+          <h2>{{ _('Aujourd\'hui, nous avons besoin d\'aide.') }}</h2>
+          <p>{{ _('Pour avancer plus rapidement sur le développement de notre interface utilisateur') }}</p>
+          <p>{{ _('Pour toute question, ou pour proposer votre aide, vous pouvez nous contacter.') }}</p>
         </div>
       </div>
   </main>
@@ -18,18 +18,18 @@
     <div class="layout">
       <div class="big-icons">
         <article id="github">
-          <h3>Fork us on GitHub</h3>
-          <a href="https://github.com/CaliOpen/CaliOpen" class="logo">octopus Github</a>
+          <h3>{{ _('Fork us on GitHub') }}</h3>
+          <a href="https://github.com/CaliOpen/CaliOpen" class="logo">{{ _('octopus Github') }}</a>
         </article>
 
         <article id="email">
-          <h3>Send an email</h3>
-          <a href="/" class="logo">enveloppe</a>
+          <h3>{{ _('Send an email') }}</h3>
+          <a href="/" class="logo">{{ _('enveloppe') }}</a>
         </article>
 
         <article id="blog">
-          <h3>Visit our blog</h3>
-          <a href="/" class="logo">bubble</a>
+          <h3>{{ _('Visit our blog') }}</h3>
+          <a href="/" class="logo">{{ _('bubble') }}</a>
         </article>
       </div>
     </div>
