--- a/caliopen/templates/layout/features.jinja2
+++ b/caliopen/templates/layout/features.jinja2
@@ -36,61 +36,61 @@
     <div class="layout">
       <ul>
         <li id="confidentiality">
-          <h3>Niveaux de confidentialité</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p>
+          <h3>{{ _('Niveaux de confidentialité') }}</h3>
+          <p>{{ _('Texte de "Niveaux de confidentialité"') }}</p>
         </li>
 
         <li id="intuitive-search">
-          <h3>Recherche intuitive</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p>
+          <h3>{{ _('Recherche intuitive') }}</h3>
+          <p>{{ _('Texte de "Recherche intuitive"') }}</p>
         </li>
       </ul>
 
       <ul>
         <li id="importance">
-          <h3>Niveaux d'importance'</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p>
+          <h3>{{ _('Niveaux d''mportance') }}</h3>
+          <p>{{ _('Texte de "Niveaux d''mportance"') }}</p>
         </li>
 
         <li id="devices-manager">
-          <h3>Gestion des devices</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p>
+          <h3>{{ _('Gestion des devices') }}</h3>
+          <p>{{ _('Texte de "Gestion des devices"') }}</p>
         </li>
       </ul>
 
       <ul>
         <li id="smart-appointment">
-          <h3>Rendez-vous intelligents</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p>
+          <h3>{{ _('Rendez-vous intelligents') }}</h3>
+          <p>{{ _('Texte de "Rendez-vous intelligents"') }}</p>
         </li>
 
         <li id="degraded-mode">
-          <h3>Mode dégradé</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p>
+          <h3>{{ _('Mode dégradé') }}</h3>
+          <p>{{ _('Texte de "Mode dégradé"') }}</p>
         </li>
       </ul>
 
       <ul>
          <li id="auto-label">
-          <h3>Labels automatiques</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p>
+          <h3>{{ _('Labels automatiques') }}</h3>
+          <p>{{ _('Texte de "Labels automatiques"') }}</p>
         </li>
 
         <li id="advanced-settings">
-          <h3>Paramétrages avancés</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p>
+          <h3>{{ _('Paramétrages avancés') }}</h3>
+          <p>{{ _('Texte de "Paramétrages avancés"') }}</p>
         </li>
       </ul>
 
       <ul>
         <li id="custom-views">
-          <h3>Vue personnalisées</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p>
+          <h3>{{ _('Vue personnalisées') }}</h3>
+          <p>{{ _('Texte de "Vue personnalisées"') }}</p>
         </li>
 
         <li id="centralization">
-          <h3>Centralisation des messages</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p>
+          <h3>{{ _('Centralisation des messages') }}</h3>
+          <p>{{ _('Texte de "Centralisation des messages"') }}</p>
         </li>
       </ul>
     </div>
@@ -101,7 +101,7 @@
   <main id="features-layout">
     <div class="layout">
       <article>
-        <p>Nous avons passé beaucoup de temps, avant même d'envisager les solutions techniques, à travailler sur l'ergonomie et le design d'une interface utilisateur qui puisse intégrer tous nos échanges privés. C'est, à ce jour, sur ce point que porte la majorité de nos efforts : si nous voulons intéresser le plus grand nombre à la prise en compte des problématiques de vie privée, c'est à nous de créer un outil attractif, plutôt que d'attendre un effort illusoire des utilisateurs.</p>
+        <p>{{ _('Nous avons passé beaucoup de temps, avant même d''envisager les solutions techniques') }}</p>
         <p>
           <span class="illustration"></span>
         </p>
