--- a/caliopen/templates/layout/home.jinja2
+++ b/caliopen/templates/layout/home.jinja2
@@ -5,7 +5,7 @@
     <div class="layout">
       <div>
         <article>
-          <h2>The best way to discuss with your contacts,<br/>while preserving your privacy.</h2>
+          <h2>{{ _('The best way to discuss with your contacts') }}</h2>
 
           <img src="/static/images/home_main_image_1.png" />
           <img src="/static/images/home_main_image_2.png" />
@@ -13,7 +13,7 @@
         </article>
 
         <article>
-          <button>Try the demo</button>
+          <button>{{ _('Try the demo') }}</button>
         </article>
       </div>
     </div>
@@ -25,21 +25,21 @@
     <div class="layout">
       <div class="big-icons">
         <article id="video">
-          <h3>Watch the CaliOpen video</h3>
-          <a href="/">camera</a>
-          <p>View the video of the presentation of the project and comments of Laurent Chemla.</p>
+          <h3>{{ _('Watch the CaliOpen video') }}</h3>
+          <a href="/">{{ _('camera') }}</a>
+          <p>{{ _('View the video of the presentation of the project and comments of Laurent Chemla.') }}</p>
         </article>
 
         <article id="github">
-          <h3>CaliOpen on GitHub</h3>
-          <a href="/">octopus Github</a>
-          <p>Participate to the development of the project and get involved.</p>
+          <h3>{{ _('CaliOpen on GitHub') }}</h3>
+          <a href="/">{{ _('octopus Github') }}</a>
+          <p>{{ _('Participate to the development of the project and get involved.') }}</p>
         </article>
 
         <article id="details">
-          <h3>CaliOpen in detail</h3>
-          <a href="/">features</a>
-          <p>Discover all key features of the application and our vision.</p>
+          <h3>{{ _('CaliOpen in detail') }}</h3>
+          <a href="/">{{ _('features') }}</a>
+          <p>{{ _('Discover all key features of the application and our vision.') }}</p>
         </article>
       </div>
     </div>
