--- a/caliopen/templates/layout/page.jinja2
+++ b/caliopen/templates/layout/page.jinja2
@@ -15,10 +15,10 @@
       <div class="nav">
         <nav role="navigation">
           <ul>
-            <li id="navigation-main-take-a-tour"><a href="{{'tour'|route_url}}" class="button">Take a tour</a></li>
-            <li id="navigation-main-about"><a href="{{'about'|route_url}}" class="button">About</a></li>
-            <li id="navigation-main-features"><a href="{{'features'|route_url}}" class="button">Features</a></li>
-            <li id="navigation-main-contact-us"><a href="{{'contact'|route_url}}" class="button">Contact us</a></li>
+            <li id="navigation-main-take-a-tour"><a href="{{'tour'|route_url}}" class="button">{{ _('Take a tour') }}</a></li>
+            <li id="navigation-main-about"><a href="{{'about'|route_url}}" class="button">{{ _('About') }}</a></li>
+            <li id="navigation-main-features"><a href="{{'features'|route_url}}" class="button">{{ _('Features') }}</a></li>
+            <li id="navigation-main-contact-us"><a href="{{'contact'|route_url}}" class="button">{{ _('Contact us') }}</a></li>
           </ul>
         </nav>
       </div>
@@ -31,24 +31,24 @@
   <div class="layout">
     <div>
       <div class="gandi">
-        <p id="support-by-gandi" class="column">A project supported by
+        <p id="support-by-gandi" class="column">{{ _('A project supported by') }}
         <a href="http://www.gandi.net" title="Gandi.net" class="logo">Gandi.net</a></p>
       </div>
 
       <div class="sitemap">
         <div>
           <ul class="footer-links column">
-            <li id="footer-link-product" class="list-title">Product</li>
-            <li id="footer-link-origins"><a href="{{'about'|route_url}}">The origins</a></li>
-            <li id="footer-link-download"><a href="https://github.com/CaliOpen/CaliOpen/archive/master.zip">Download</a></li>
+            <li id="footer-link-product" class="list-title">{{ _('Product') }}</li>
+            <li id="footer-link-origins"><a href="{{'about'|route_url}}">{{ _('The origins') }}</a></li>
+            <li id="footer-link-download"><a href="https://github.com/CaliOpen/CaliOpen/archive/master.zip">{{ _('Download') }}</a></li>
           </ul>
         </div>
 
         <div>
           <ul class="footer-links column">
-            <li id="footer-link-community" class="list-title">Community</li>
-            <li id="footer-link-fork-us"><a href="https://github.com/CaliOpen/CaliOpen">Fork us on GitHub</a></li>
-            <li id="footer-link-blog"><a href="/">Visit our blog</a></li>
+            <li id="footer-link-community" class="list-title">{{ _('Community') }}</li>
+            <li id="footer-link-fork-us"><a href="https://github.com/CaliOpen/CaliOpen">{{ _('Fork us on GitHub') }}</a></li>
+            <li id="footer-link-blog"><a href="/">{{ _('Visit our blog') }}</a></li>
           </ul>
         </div>
       </div>
