--- a/caliopen/templates/layout/tour.jinja2
+++ b/caliopen/templates/layout/tour.jinja2
@@ -5,13 +5,13 @@
     <div class="layout">
       <div>
         <article>
-          <h2>And your privacy becomes completely private...</h2>
+          <h2>{{ _('And your privacy becomes completely private...') }}</h2>
           <ul>
-            <li>Centralize all of your private communications</li>
-            <li>Securely share confidential information</li>
-            <li>Enjoy an intuitive interface</li>
+            <li>{{ _('Centralize all of your private communications') }}</li>
+            <li>{{ _('Securely share confidential information') }}</li>
+            <li>{{ _('Enjoy an intuitive interface') }}</li>
           </ul>
-          <button>Try the demo</button>
+          <button>{{ _('Try the demo') }}</button>
         </article>
         <div class="screenshot">
           <img src="/static/images/tour_main_vide.png" alt="screenshot"/>
@@ -26,17 +26,17 @@
     <div class="layout">
       <div class="big-icons">
         <article id="centralization">
-          <img src="/static/images/tour_centralize.png" alt="centralize"/>
-          <p>An application for centralize all your private communications,
-  at any time, everywhere</p>
+          <img src="/static/images/tour_centralize.png" alt="{{ _('centralize') }}"/>
+          <p>{{ _('An application for centralize all your private communications,
+  at any time, everywhere') }}</p>
         </article>
         <article id="confidentiality">
-          <img src="/static/images/tour_confidentiality.png" alt="confidentiality"/>
-          <p>A tool for control and verify the confidentiality level of your contacts, messages, files, devices and whatever</p>
+          <img src="/static/images/tour_confidentiality.png" alt="{{ _('confidentiality') }}"/>
+          <p>{{ _('A tool for control and verify the confidentiality level of your contacts, messages, files, devices and whatever') }}</p>
         </article>
         <article id="ux">
-          <img src="/static/images/tour_ux.png" alt="user experience"/>
-          <p>A modern user experience for a better feeling with the application, everything is natural and design thinked</p>
+          <img src="/static/images/tour_ux.png" alt="{{ _('user experience') }}"/>
+          <p>{{ _('A modern user experience for a better feeling with the application, everything is natural and design thinked') }}</p>
         </article>
       </div>
     </div>
@@ -49,16 +49,16 @@
       <article>
         <ul>
           <li id="about">
-            <h3>About</h3>
-            <p>Comment ce projet est-il né ? Quels en sont les fondements ? En quoi est-ce différent de tout ce que vous utilisez actuellement pour dialoguer avec vos amis ou votre famille. Découvrez la notion de réseau social privé qui change tout, à commencer par le respect de votre vie privée.<a href="{{'about'|route_url}}">Read more</a></p>
+            <h3>{{ _('About') }}</h3>
+            <p>{{ _('Comment ce projet est-il né ? Quels en sont les fondements ? En quoi est-ce différent de tout ce que vous utilisez actuellement pour dialoguer avec vos amis ou votre famille.') }}<a href="{{'about'|route_url}}">{{ _('Read more') }}</a></p>
           </li>
           <li id="features">
-            <h3>Features</h3>
-            <p>De nombreuses fonctionnalités avancées sont mises à votre disposition au sein de notre solution. Échangez simplement et sereinement avec votre entourage, et découvrez des possibilités multiples qui sont le fruit d'une longue réflexion et qui désormais vous faciliterons la vie.<a href="{{'features'|route_url}}">Read more</a></p>
+            <h3>{{ _('Features') }}</h3>
+            <p>{{ _('De nombreuses fonctionnalités avancées sont mises à votre disposition au sein de notre solution.') }}<a href="{{'features'|route_url}}">{{ _('Read more') }}</a></p>
           </li>
           <li id="contact">
-            <h3>Contact</h3>
-            <p>Vous voulez nous communiquer votre avis ? Envie de prendre part à l'aventure ? Vous voulez participer à la création d'un nouvel outil, qui vise à changer radicalement la manière d'échanger avec ses proches ? Aidez-nous, rejoignez-nous.<a href="{{'contact'|route_url}}">Read more</a></p>
+            <h3>{{ _('Contact') }}</h3>
+            <p>{{ _('Vous voulez nous communiquer votre avis ? Envie de prendre part à l''aventure ?') }}<a href="{{'contact'|route_url}}">{{ _('Read more') }}</a></p>
           </li>
         </ul>
       </article>
