Update navigation to disable link on active page

--- a/caliopen/static/css/common.less
+++ b/caliopen/static/css/common.less
@@ -104,6 +104,9 @@ header {
           &:last-child {
             margin-right: 14px;
           }
+          span {
+            background-color: #33ccff;
+          }
         }
         .button {
           margin-right: 12px;
