--- a/caliopen/templates/layout/page.jinja2
+++ b/caliopen/templates/layout/page.jinja2
@@ -15,10 +15,34 @@
       <div class="nav">
         <nav role="navigation">
           <ul>
-            <li id="navigation-main-take-a-tour"><a href="{{'tour'|route_url}}" class="button">{{ _('Take a tour') }}</a></li>
-            <li id="navigation-main-about"><a href="{{'about'|route_url}}" class="button">{{ _('About') }}</a></li>
-            <li id="navigation-main-features"><a href="{{'features'|route_url}}" class="button">{{ _('Features') }}</a></li>
-            <li id="navigation-main-contact-us"><a href="{{'contact'|route_url}}" class="button">{{ _('Contact us') }}</a></li>
+            <li id="navigation-main-take-a-tour">
+              {% if active_nav == 'take_a_tour' %}
+                <span class="button">{{ _('Take a tour') }}</span>
+              {% else %}
+                <a href="{{'tour'|route_url}}" class="button">{{ _('Take a tour') }}</a>
+              {% endif %}
+            </li>
+            <li id="navigation-main-about">
+              {% if active_nav == 'about' %}
+                <span class="button">{{ _('About') }}</span>
+              {% else %}
+                <a href="{{'about'|route_url}}" class="button">{{ _('About') }}</a>
+              {% endif %}
+            </li>
+            <li id="navigation-main-features">
+              {% if active_nav == 'features' %}
+                <span class="button">{{ _('Features') }}</span>
+              {% else %}
+                <a href="{{'features'|route_url}}" class="button">{{ _('Features') }}</a>
+              {% endif %}
+            </li>
+            <li id="navigation-main-contact-us">
+              {% if active_nav == 'contact' %}
+                <span class="button">{{ _('Contact us') }}</span>
+              {% else %}
+                <a href="{{'contact'|route_url}}" class="button">{{ _('Contact us') }}</a>
+              {% endif %}
+            </li>
           </ul>
         </nav>
       </div>
