Update intro img on the "take a tour" page.

--- a/caliopen/static/css/tour.less
+++ b/caliopen/static/css/tour.less
@@ -42,7 +42,7 @@ main {
   .screenshot {
     .make-md-column(7);
     img {
-      .illustration(572px, 384px, #fff, #333, 36px, 18px);
+      //.illustration(572px, 384px, #fff, #333, 36px, 18px);
       .center-block();
     }
   }
