Add the favicon "caliopen".

--- a/caliopen/templates/layout/html.jinja2
+++ b/caliopen/templates/layout/html.jinja2
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
+    <link rel="shortcut icon" sizes="16x16 32x32 48x48 64x64" href="{{'caliopen:static/images/favicon.ico'|static_url}}" />
     <link rel="stylesheet/less" type="text/css" href="{{'caliopen:static/css/styles.less'|static_url}}" />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   </head>
