--- a/caliopen_website/templates/layout/tour.jinja2
+++ b/caliopen_website/templates/layout/tour.jinja2
@@ -50,15 +50,15 @@
         <ul>
           <li id="about">
             <h3>{{ _('About') }}</h3>
-            <p>{{ _('Comment ce projet est-il né ? Quels en sont les fondements ? En quoi est-ce différent de tout ce que vous utilisez actuellement pour dialoguer avec vos amis ou votre famille.') }}<a href="{{'about'|route_url}}">{{ _('Read more') }}</a></p>
+            <p>{{ _('Comment ce projet est-il né ? Quels en sont les fondements ? En quoi est-ce différent de tout ce que vous utilisez actuellement pour dialoguer avec vos amis ou votre famille.') }}<a href="{{'about'|route_path}}">{{ _('Read more') }}</a></p>
           </li>
           <li id="features">
             <h3>{{ _('Features') }}</h3>
-            <p>{{ _('De nombreuses fonctionnalités avancées sont mises à votre disposition au sein de notre solution.') }}<a href="{{'features'|route_url}}">{{ _('Read more') }}</a></p>
+            <p>{{ _('De nombreuses fonctionnalités avancées sont mises à votre disposition au sein de notre solution.') }}<a href="{{'features'|route_path}}">{{ _('Read more') }}</a></p>
           </li>
           <li id="contact">
             <h3>{{ _('Contact') }}</h3>
-            <p>{{ _('Vous voulez nous communiquer votre avis ? Envie de prendre part à l''aventure ?') }}<a href="{{'contact'|route_url}}">{{ _('Read more') }}</a></p>
+            <p>{{ _('Vous voulez nous communiquer votre avis ? Envie de prendre part à l''aventure ?') }}<a href="{{'contact'|route_path}}">{{ _('Read more') }}</a></p>
           </li>
         </ul>
       </article>
