Use assets instead of static

--- a/caliopen_website/templates/layout/features.jinja2
+++ b/caliopen_website/templates/layout/features.jinja2
@@ -21,9 +21,9 @@
       <article>
         <div class="slider">
           <div id="slides">
-            <img src="/static/images/features_carrousel_1.png" />
-            <img src="/static/images/features_carrousel_2.png" />
-            <img src="/static/images/features_carrousel_3.png" />
+            <img src="{{'caliopen_website:assets/images/features_carrousel_1.png'|static_path}}" />
+            <img src="{{'caliopen_website:assets/images/features_carrousel_2.png'|static_path}}" />
+            <img src="{{'caliopen_website:assets/images/features_carrousel_3.png'|static_path}}" />
           </div>
         </div>
       </article>
