--- a/caliopen_website/templates/layout/home.jinja2
+++ b/caliopen_website/templates/layout/home.jinja2
@@ -7,9 +7,9 @@
         <article>
           <h2>{{ _('The best way to discuss with your contacts') }}</h2>
 
-          <img src="/static/images/home_main_image_1.png" />
-          <img src="/static/images/home_main_image_2.png" />
-          <img src="/static/images/home_main_image_3.png" />
+          <img src="{{'caliopen_website:assets/images/home_main_image_1.png'|static_path}}" />
+          <img src="{{'caliopen_website:assets/images/home_main_image_2.png'|static_path}}" />
+          <img src="{{'caliopen_website:assets/images/home_main_image_3.png'|static_path}}" />
         </article>
 
         <article>
