--- a/caliopen_website/templates/layout/html.jinja2
+++ b/caliopen_website/templates/layout/html.jinja2
@@ -11,11 +11,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <link rel="shortcut icon" sizes="16x16 32x32 48x48 64x64" href="{{'caliopen_website:static/images/favicon.ico'|static_path}}" />
+    <link rel="shortcut icon" sizes="16x16 32x32 48x48 64x64" href="{{'caliopen_website:assets/images/favicon.ico'|static_path}}" />
     {% if use_less %}
-        <link rel="stylesheet/less" type="text/css" href="{{'caliopen_website:static/css/styles.less'|static_path}}" />
+        <link rel="stylesheet/less" type="text/css" href="{{'caliopen_website:assets/css/styles.less'|static_path}}" />
     {% else %}
-        <link rel="stylesheet" type="text/css" href="{{'caliopen_website:static/css/styles.css'|static_path}}" />
+        <link rel="stylesheet" type="text/css" href="{{'caliopen_website:assets/css/styles.css'|static_path}}" />
     {% endif %}
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   </head>
@@ -30,10 +30,10 @@
     {% block content3 %}{% endblock %}
     <footer>{% block footer %}{% endblock %}</footer>
 
-    <script src="{{'caliopen_website:static/js/jquery-1.11.1.min.js'|static_path}}" type="text/javascript"></script>
-    <script src="{{'caliopen_website:static/js/jquery.slides.min.js'|static_path}}" type="text/javascript"></script>
+    <script src="{{'caliopen_website:assets/js/jquery-1.11.1.min.js'|static_path}}" type="text/javascript"></script>
+    <script src="{{'caliopen_website:assets/js/jquery.slides.min.js'|static_path}}" type="text/javascript"></script>
     {% if use_less %}
-        <script src="{{'caliopen_website:static/js/less-1.7.0.min.js'|static_path}}" type="text/javascript"></script>
+        <script src="{{'caliopen_website:assets/js/less-1.7.0.min.js'|static_path}}" type="text/javascript"></script>
     {% endif %}
 
     {% block inlinescript %}{% endblock %}
