--- a/caliopen_website/templates/layout/tour.jinja2
+++ b/caliopen_website/templates/layout/tour.jinja2
@@ -14,7 +14,7 @@
           <button>{{ _('Try the demo') }}</button>
         </article>
         <div class="screenshot">
-          <img src="/static/images/tour_main.png" alt="screenshot"/>
+          <img src="{{'caliopen_website:assets/images/tour_main.png'|static_path}}" alt="screenshot"/>
         </div>
       </div>
     </div>
@@ -26,16 +26,16 @@
     <div class="layout">
       <div class="big-icons">
         <article id="centralization">
-          <img src="/static/images/tour_centralize.png" alt="{{ _('centralize') }}"/>
+          <img src="{{'caliopen_website:assets/images/tour_centralize.png'|static_path}}" alt="{{ _('centralize') }}"/>
           <p>{{ _('An application for centralize all your private communications,
   at any time, everywhere') }}</p>
         </article>
         <article id="confidentiality">
-          <img src="/static/images/tour_confidentiality.png" alt="{{ _('confidentiality') }}"/>
+          <img src="{{'caliopen_website:assets/images/tour_confidentiality.png'|static_path}}" alt="{{ _('confidentiality') }}"/>
           <p>{{ _('A tool for control and verify the confidentiality level of your contacts, messages, files, devices and whatever') }}</p>
         </article>
         <article id="ux">
-          <img src="/static/images/tour_ux.png" alt="{{ _('user experience') }}"/>
+          <img src="{{'caliopen_website:assets/images/tour_ux.png'|static_path}}" alt="{{ _('user experience') }}"/>
           <p>{{ _('A modern user experience for a better feeling with the application, everything is natural and design thinked') }}</p>
         </article>
       </div>
