Change "button" tag with "a" tag
... and move "button" style in common

--- a/caliopen_website/assets/css/common.less
+++ b/caliopen_website/assets/css/common.less
@@ -222,3 +222,22 @@ footer {
     margin: 30px 20px;
   }
 }
+
+main {
+  a.button {
+    display: inline-block;
+    margin: 40px 0 50px 0;
+    .border-radius(8px);
+    font-size: 1.8em;
+    font-weight: 800;
+    padding: 12px 40px;
+    color: #fff;
+    background-color: #f76548;
+    border: 0px;
+    &:hover, &:active {
+      background-color: #ea5537;
+      text-decoration: none;
+      cursor: pointer;
+    }
+  }
+}
