--- a/caliopen_website/templates/layout/tour.jinja2
+++ b/caliopen_website/templates/layout/tour.jinja2
@@ -11,7 +11,7 @@
             <li>{{ _('Securely share confidential information') }}</li>
             <li>{{ _('Enjoy an intuitive interface') }}</li>
           </ul>
-          <button>{{ _('Try the demo') }}</button>
+          <a href="{{'features'|route_path}}" class="button">{{ _('Essayer la démo') }}</a>
         </article>
         <div class="screenshot">
           <img src="{{'caliopen_website:assets/images/tour_main.png'|static_path}}" alt="screenshot"/>
