--- a/caliopen_website/templates/layout/home.jinja2
+++ b/caliopen_website/templates/layout/home.jinja2
@@ -13,7 +13,7 @@
         </article>
 
         <article>
-          <button>{{ _('Try the demo') }}</button>
+          <a href="{{'features'|route_path}}" class="button">{{ _('Essayer la démo') }}</a>
         </article>
       </div>
     </div>
